scripts/k8s/app/http/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $DEPLOYMENT
  labels:
    app: $DEPLOYMENT
spec:
  selector:
    matchLabels:
      app: $DEPLOYMENT
  template:
    metadata:
      labels:
        app: $DEPLOYMENT
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "$PORT"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: $DEPLOYMENT
          image: $IMAGE_REPO/$PROJECT:$VERSION
          command: [ "/app/$PROJECT", "$CMD" ]
          imagePullPolicy: Always
          ports:
            - name: service
              containerPort: $PORT
