scripts/k8s/app/http/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${PROJECT}-${CMD}"
  annotations:
  labels:
    app: "${PROJECT}-${CMD}"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8089
      targetPort: $HTTP_PORT
  selector:
    app: "${PROJECT}-${CMD}"
